# Axo-McLCE-ModLoader

./: AxoAPI.cpp  AxoAPI.h  AxoBiomeImpl.cpp  AxoBlockImpl.cpp  AxoCropImpl.cpp  AxoItemImpl.cpp  AxoModLoader.cpp  AxoModLoader.h  AxoRecipeImpl.cpp  AxoWorldGen.cpp  AxoWorldGen.h  CONTRIBUTING.md  LICENSE  README.md
AxoSDK/: CMakeLists.txt  README.md
AxoSDK/examples/HelloMod/: CMakeLists.txt  HelloMod.cpp  manifest.json
AxoSDK/examples/ShadowsWoodStoneArmor/: CMakeLists.txt  ShadowsWoodStoneArmor.cpp  manifest.json
AxoSDK/include/: AxoAPI.h
docs/: forge-comparison.md
installer/: axoloader_installer.pyw
